syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AbilitySyncStateInfo.proto";
import "ServerBuff.proto";


message AvatarEnterSceneInfo {
	uint64 weapon_guid = 10;
	uint64 avatar_guid = 8;
	uint32 weapon_entity_id = 1;
	uint32 avatar_entity_id = 13;
	AbilitySyncStateInfo avatar_ability_info = 7;
	AbilitySyncStateInfo weapon_ability_info = 15;
	repeated uint32 buff_id_list = 12;
	repeated ServerBuff server_buff_list = 14;
}