syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message ForgeFormulaDataNotify {
	bool is_locked = 10;
	uint32 forge_id = 7;
}