syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "LuaShellType.proto";


message PlayerLuaShellNotify {
	bytes lua_shell = 1;
	uint32 use_type = 3;
	uint32 id = 2;
	LuaShellType shell_type = 5;
}